<resources>
    <string name="app_name">Nop Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_image">Item image</string>
    <string name="california_orange_8_pcs">California Orange 8 Pcs</string>
    <string name="_15_00">$15.00</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="best_selling">BEST SELLING</string>
    <string name="our_categories">OUR CATEGORIES</string>
    <string name="feature_products">FEATURE PRODUCTS</string>
    <string name="women_heel">WOMEN HEEL</string>
    <string name="salmon_fish">SALMON FISH</string>
    <string name="furniture_collection">FURNITURE COLLECTION</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="category">Category</string>
    <string name="product_name">Product name</string>
    <string name="badge_count">0</string>
    <string name="quantity">Quantity:</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industr y\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="description_title">Description</string>
    <string name="buy_now">BUY NOW!</string>
    <string name="cart">+ ADD TO CART</string>
    <string name="buy_now_">BUY NOW!</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="products">PRODUCTS</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="total">Total:</string>
    <string name="total_price">$555.00</string>
    <string name="shipping">Shipping</string>
    <string name="sub_total_title">Sub-Total</string>
    <string name="subtotal_price">$550.00</string>
    <string name="quantity_plus">quantity_plus</string>
    <string name="account_app_bar">Account</string>
</resources>