<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/categoryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_categories"
        android:title="@string/categories" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/logInFragment"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
    <item
        android:id="@+id/more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />
</menu>