<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="165dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:elevation="16dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            android:src="@drawable/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".7"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <ImageButton
            android:id="@+id/add_to_cart_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/round_shape"
            android:backgroundTint="@color/white"
            android:padding="4dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/product_img"
            app:layout_constraintEnd_toEndOf="@id/product_img"
            app:tint="#10CB3C" />

        <TextView
            android:id="@+id/product_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_bold"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/california_orange_8_pcs"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:maxLines="1"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_img"
            android:ellipsize="end"/>

        <RatingBar
            android:id="@+id/product_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:rating="3"
            android:progressTint="@color/ratingBarActivate"
            app:layout_constraintEnd_toEndOf="@id/product_name_tv"
            app:layout_constraintStart_toStartOf="@id/product_name_tv"
            app:layout_constraintTop_toBottomOf="@id/product_name_tv" />

        <TextView
            android:id="@+id/product_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/khand_medium"
            android:text="@string/_15_00"
            android:textColor="@color/appTheme"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/product_rating"
            app:layout_constraintStart_toStartOf="@id/product_rating"
            app:layout_constraintTop_toBottomOf="@id/product_rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
