<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".screen.authentication.LogInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_email_et_layout"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/username_or_email"
                android:textColorHint="#83868C"
                app:boxStrokeColor="#D4D3DA"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_acccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/black"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_et_layout"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:textColorHint="#83868C"
                app:boxStrokeColor="#D4D3DA"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/password_toggle"
                app:layout_constraintEnd_toEndOf="@id/username_email_et_layout"
                app:layout_constraintStart_toStartOf="@id/username_email_et_layout"
                app:layout_constraintTop_toBottomOf="@id/username_email_et_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password_et_layout"
                app:layout_constraintStart_toStartOf="@id/password_et_layout"
                app:layout_constraintEnd_toEndOf="@id/password_et_layout"
                android:background="@drawable/gradient_button"
                android:text="@string/login"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                android:padding="10dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>